--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,9 @@ margin-right: 0px;
   .b6{
     min-height: 2100px;
   }
+  .content6{
+    min-height: 2100px;
+  }
   .char{
     width:100%;
   }
@@ -692,6 +695,9 @@ margin-right: 0px;
     line-height: normal;
   }
   .b6{
+    min-height: 2000px;
+  }
+   .content6{
     min-height: 2000px;
   }
 }
